--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,10 +69,6 @@ build_application:
   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.0.0
   before_script:
     - pip3 install boto boto3
-    # - tower-cli config host $TOWER_CLI_HOST
-    # - tower-cli config username $TOWER_CLI_USERNAME
-    # - tower-cli config password $TOWER_CLI_PASSWORD
-    # - tower-cli config verify_ssl false
 
     - export ANSIBLE_HOST_KEY_CHECKING=False
     - chmod 400 ./infrastructure/hellowebui_key.pem
@@ -84,29 +80,18 @@ build_application:
     - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
     - ansible-playbook build.yml 
         --extra-vars="cli_ec2region=us-west-1 cli_aminame=hellowebui cli_ci_pipeline_id='$CI_PIPELINE_ID' cli_ci_commit_message='$CI_COMMIT_MESSAGE'" 
-    - cd ../
-  artifacts:
-    paths:
-      - ${PWD}/infrastructure/version.var
 
 .deploy: &deploy
   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.0.0
   script:
     - pip3 install boto boto3
-    # - tower-cli config host $ENV_TOWER_CLI_HOST
-    # - tower-cli config username $ENV_TOWER_CLI_USERNAME
-    # - tower-cli config password $ENV_TOWER_CLI_PASSWORD
-    # - tower-cli config verify_ssl false
 
+    - export ANSIBLE_HOST_KEY_CHECKING=False
+    - chmod 400 ./infrastructure/hellowebui_key.pem
     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
     - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
 
-    # - tower-cli job launch 
-    #     --job-template site-prov 
-    #     --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
-    #     --tags "provision,provision-core,setup-core" 
-    #     --wait
     - cd ./infrastructure
     - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
     - ansible-playbook site.yml 
@@ -139,6 +124,8 @@ plan:
   before_script:
     - pip3 install boto boto3
 
+    - export ANSIBLE_HOST_KEY_CHECKING=False
+    - chmod 400 ./infrastructure/hellowebui_key.pem
     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
     - export AWS_DEFAULT_REGION="us-west-1"
@@ -183,20 +170,13 @@ functional_regression_test_staging:
   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode/maven:4.0.0
   before_script:
     - pip3 install boto boto3
-    # - tower-cli config host $TOWER_CLI_HOST
-    # - tower-cli config username $TOWER_CLI_USERNAME
-    # - tower-cli config password $TOWER_CLI_PASSWORD
-    # - tower-cli config verify_ssl false
 
+    - export ANSIBLE_HOST_KEY_CHECKING=False
+    - chmod 400 ./infrastructure/hellowebui_key.pem
     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
-    # - tower-cli job launch 
-    #   --job-template site-prov 
-    #   --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME_STG cli_deploymentenv=staging cli_action=test cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
-    #   --tags "provision,provision-test,setup-test" 
-    #   --wait
     - cd ./infrastructure
     - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
     - ansible-playbook site.yml 
@@ -231,17 +211,14 @@ stop-staging:
     ENVIRONMENT: staging
   before_script:
     - pip3 install boto boto3
-    # - tower-cli config host $ENV_TOWER_CLI_HOST
-    # - tower-cli config username $ENV_TOWER_CLI_USERNAME
-    # - tower-cli config password $ENV_TOWER_CLI_PASSWORD
-    # - tower-cli config verify_ssl false
 
+    - export ANSIBLE_HOST_KEY_CHECKING=False
+    - chmod 400 ./infrastructure/hellowebui_key.pem
     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
     - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
   script:
     - cd ./infrastructure
-    # - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
     - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
     - ansible-playbook site.yml 
         --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
@@ -266,17 +243,14 @@ stop-review:
     ENVIRONMENT: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
   before_script:
     - pip3 install boto boto3
-    # - tower-cli config host $ENV_TOWER_CLI_HOST
-    # - tower-cli config username $ENV_TOWER_CLI_USERNAME
-    # - tower-cli config password $ENV_TOWER_CLI_PASSWORD
-    # - tower-cli config verify_ssl false
 
+    - export ANSIBLE_HOST_KEY_CHECKING=False
+    - chmod 400 ./infrastructure/hellowebui_key.pem
     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
     - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
   script:
     - cd ./infrastructure
-    # - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$ENV_AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
     - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
     - ansible-playbook site.yml 
         --extra-vars="cli_ec2region=$ENV_AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
